DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2004-12-06 patrickh    Added an overload of EnvironmentService.getenv() that
                       allows users to specify a default value to be returned
                       if the environment variable is not found.
                       NEW VERSION: 0.20.3
2004-11-13 patrickh    Added org.vrjuggler.tweek.event.EventListenerRegistry.
                       NEW VERSION: 0.20.1
2004-11-13 patrickh    Refactored the handling of TweekFrameListener so that
                       all window events are delivered to the listeners.
                       NEW VERSION: 0.20.0
2004-11-05 patrickh    Added EnvironmentService.getenv(), which is implemented
                       using a Java native method.
                       NEW VERSION: 0.19.2
2004-11-04 patrickh    The Tweek JavaBean Loader is now installed as a bundle
                       on Mac OS X (in addition to the "traditional" UNIX
                       installation launched by a shell script).
                       NEW VERSION: 0.19.1
2004-11-04 patrickh    Changed the location of Tweek data files to $HOME/.tweek
                       on UNIX-based platforms.  Along with this,
                       $HOME/.tweekrc has been renamed to $HOME/.tweek/tweekrc.
                       Added a new user-specific directory to the default Bean
                       search path: <Tweek data dir>/beans.  This uses the
                       platform-specific data directory.
                       NEW VERSION: 0.19.0
2004-11-04 patrickh    Added EnvironmentService.getOS().
                       NEW VERSION: 0.18.2
2004-10-29 patrickh    Extended the Tweek Java GUI to integrate into Mac OS X.
2004-10-29 patrickh    Relocated the Tweek Java libraries to the directory
                       $TWEEK_BASE_DIR/share/tweek/java.  Changed the default